force-app/main/default/objects/Case/fields/Airline_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Airline_Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>