force-app/main/default/objects/Case/fields/Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>Incident_Location__c</fullName>
    <label>Incident Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gate</fullName>
            </value>
            <value>
                <fullName>Runway</fullName>
            </value>
            <value>
                <fullName>Taxiway</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
            <value>
                <fullName>Cabin</fullName>
            </value>
            <value>
                <fullName>Cockpit</fullName>
            </value>
            <value>
                <fullName>Baggage Area</fullName>
            </value>
            <value>
                <fullName>Hangar</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>