force-app/main/default/objects/Case/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical Failure</fullName>
            </value>
            <value>
                <fullName>Hazardous Material</fullName>
            </value>
            <value>
                <fullName>Near Miss</fullName>
            </value>
            <value>
                <fullName>Wildlife Strike</fullName>
            </value>
            <value>
                <fullName>Ground Collision</fullName>
            </value>
            <value>
                <fullName>Fuel Spill</fullName>
            </value>
            <value>
                <fullName>Passenger Injury</fullName>
            </value>
            <value>
                <fullName>Crew Injury</fullName>
            </value>
            <value>
                <fullName>Security Breach</fullName>
            </value>
            <value>
                <fullName>Weather Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>