force-app/main/default/objects/Case/fields/Personnel_Role__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Role__c</fullName>
    <label>Personnel Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>First Officer</fullName>
            </value>
            <value>
                <fullName>Cabin Crew</fullName>
            </value>
            <value>
                <fullName>Ground Crew</fullName>
            </value>
            <value>
                <fullName>Maintenance Technician</fullName>
            </value>
            <value>
                <fullName>Air Traffic Control</fullName>
            </value>
            <value>
                <fullName>Gate Agent</fullName>
            </value>
            <value>
                <fullName>Security Personnel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>