force-app/main/default/objects/Case/fields/Witnesses__c.field-meta.xml
<CustomField>
    <fullName>Witnesses__c</fullName>
    <label>Witnesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>