force-app/main/default/objects/Case/recordTypes/SafetyConcern.recordType-meta.xml
<RecordType>
    <fullName>SafetyConcern</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>Used for safety concern reports submitted by airline personnel through the Experience Cloud portal.</description>
    <label>Safety Concern</label>
</RecordType>