force-app/main/default/objects/Case/validationRules/IncidentDateNotFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>IncidentDateNotFuture</fullName>
    <active>true</active>
    <description>Prevents an incident date/time from being set in the future on Safety Concern cases.</description>
    <errorConditionFormula>RecordType.DeveloperName = 'SafetyConcern' &amp;&amp; Incident_Date_Time__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Incident_Date_Time__c</errorDisplayField>
    <errorMessage>Incident Date &amp; Time cannot be in the future.</errorMessage>
</ValidationRule>